--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "login-with-singpass-button",
-  "version": "0.1.0",
+  "name": "@ndisg/login-with-singpass-button",
+  "version": "0.0.0",
+  "private": false,
   "description": "A styled web-component to be used with the \"Login with Singpass\" authentication flow",
   "main": "login-with-singpass-button.js",
   "scripts": {
@@ -9,7 +10,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ryanntannn/login-with-singpass-button.git#main"
+    "url": "git+https://github.com/ryanntannn/login-with-singpass-button.git"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
   "author": "Ryan Tan",
   "license": "BSD-3-Clause",
@@ -18,6 +23,9 @@
   },
   "homepage": "https://github.com/ryanntannn/login-with-singpass-button/tree/main#readme",
   "devDependencies": {
-    "http-server": "^14.1.1"
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "http-server": "^14.1.1",
+    "semantic-release": "^24.0.0"
   }
 }
